<resources>
    <string name="app_name">FinalMerge</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="totalQuestions">Total Questions:</string>
    <string name="textQuestionPlaceholder">textQuestionPlaceholder</string>
    <string name="ans_A">Yes</string>
    <string name="ans_B">No</string>
    <string name="submit">Submit</string>
    <string name="buttonCMS_inStream">Student Under CMS Category</string>
    <string name="buttonCMS_outStream">Student Outside of CMS Category</string>
    <string name="buttonSpecMajorOutsideCMSText">Specialist/Major Program Outside CMS</string>
    <string name="buttonMinorText">Minor Program</string>
    <string name="textSelectProgram">
        Select the Program for which to complete the POSt Requirements Checker
    </string>
    <string name="btn_home">Home</string>
    <string name="btn_restart">Restart</string>
    <string name="buttonHomeText">Home</string>
    <string name="total_questions">Total Questions</string>
    <string name="CMSQuiz">Taking a requirement test?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_No">No</string>
    <string name="btn_submit">Submit</string>
    <string name="check_CMS_status_holder">check_CMS_category holder</string>
    <string name="check_CMS_status">Are you a student under \n the CMS categoty?</string>

    <string name="schedule_event">Schedule Event</string>
    <string name="Title">title</string>
    <string name="Date">date</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="participation">participation</string>
    <string name="number_of_participant">Number of Participant</string>
    <string name="button">Button</string>
    <string name="home">Home</string>

    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="click_to_register">Click to register as Student</string>
    <string name="click_to_register_as_admin">Click to register as Admin</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="hello_world">Hello World</string>
    <string name="logout">Logout</string>
    <string name="home_page_ui">Home Page UI</string>
    <string name="schedule">Schedule</string>

    <string name="buttonViewFeedback">View Student Complaints</string>
    <string name="subject">Subject:</string>
    <string name="complaint">Complaint:</string>
    <string name="email">Email:</string>
    <string name="sectionTitle">Student Complaints</string>

    <string name="editEmail">Email</string>
    <string name="editSubject">Subject</string>
    <string name="formTitle">Complaints Submission</string>
    <string name="editComplaint">Complaint</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSubmitComplaint">SUBMIT</string>
    <string name="buttonSubmitFeedback">Submit Feedback</string>

    <string name="announcements">Post Announcements</string>
    <string name="ann_subject">Enter announcement subject</string>
    <string name="ann_description">Enter announcement description</string>
    <string name="post">Post</string>
    <string name="student_home_page_ui">Student Home Page UI</string>
    <string name="admin_home_page_ui">Admin home Page UI</string>
</resources>