<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplaintsPage.ComplaintsForm">

    <TextView
        android:id="@+id/formTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbarSize="6dp"
        android:text="@string/formTitle"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/formTitle"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:fontFamily="monospace"
            android:hint="@string/editEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/design_default_color_primary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />

        <EditText
            android:id="@+id/editSubject"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:fontFamily="monospace"
            android:hint="@string/editSubject"
            android:inputType="text"
            android:textColorHint="@color/design_default_color_primary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editComplaint"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:hint="@string/editComplaint"
            android:inputType="text"
            android:autofillHints="text"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:textColorHint="@color/design_default_color_primary"
            app:layout_constraintTop_toBottomOf="@+id/editSubject"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="112dp"
        android:text="@string/buttonCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonSubmitComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/buttonSubmitComplaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>