<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".LoginPage.Login.LoginView">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        >
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            >
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
<ProgressBar
    android:id="@+id/progressBar"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone">
</ProgressBar>
    <Button
        android:id="@+id/login_button"
        android:onClick="onLoginClick"

        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>
    <TextView
        android:id="@+id/StudentRegister"
        android:onClick="onStudentRegisterClick"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/click_to_register"
        >
    </TextView>
    <TextView
        android:id="@+id/AdminRegister"
        android:onClick="onAdminRegisterClick"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_register_as_admin"
        >
    </TextView>

    <!--  START of Temporary Buttons !!! -->
    <Button
        android:id="@+id/POSt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/purple_500"
        android:text="POSt" />
    <!--  END of Temporary Buttons !!! -->
</LinearLayout>





