<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:padding="24dp"
tools:context=".POStRequirementsQuiz.outStreamQuiz.outStreamDiffQuiz.outStream_Differentiation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_questions"
        android:text="@string/total_questions"
        android:textColor="@color/gray"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <TextView
    android:id="@+id/stream_diff_question"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/choices_Layout"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:text="Stream Diff Questions holder"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textStyle="bold" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/choices_Layout"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ans_CS"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        android:text="CS"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ans_Math"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        android:text="Math"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ans_Stats"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        android:text="Stats"
        android:textColor="@color/black"/>

</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/btn_submit"
        android:layout_below="@id/choices_Layout"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/teal_700"
        />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/purple_500"
        android:text="@string/btn_home" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_btn"
        android:text="Back"
        android:layout_below="@id/submit_btn"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/purple_500"
        />

</RelativeLayout>